# oscilla

./: .gitignore  Cargo.toml  README.md
docs/: audio.wasm  index.html  kernels.wgsl
shaders/: Cargo.toml
shaders/src/: lib.rs
shaders/wgsl/: manifest.json  oscilla_shaders.spv
synth/: Cargo.toml
synth/src/: lib.rs
synth/tests/: audio_sanity.rs
tools/: live.ps1
verify/: Cargo.toml
verify/src/: main.rs
wasm-audio/: Cargo.toml
wasm-audio/src/: lib.rs
web/: build.ps1  synth.html
